--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
     >
       <img src="./assets/arrow.svg" title="" alt="arrow" />
     </a>
-    <script src="/Project1/main.js"></script>
+    <script src="../Project1/JS/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/glide.min.js"></script>
     <script>
       new Glide(".glide", {
