update work section content and scss

--- a/index.html
+++ b/index.html
@@ -357,22 +357,31 @@
                       <div class="work-img">
                         <img src="./assets/work-1.png" title="" alt="" />
                       </div>
-                      <h6>UI/UX DESIGN</h6>
-                      <h3>Skilly UI/UX Design</h3>
+                      <a href="https://quicklearner.io/">Quicklearner</a>
+                      <h6>
+                        Quicklearner creates and sells a gamified student
+                        engagement platform
+                      </h6>
                     </li>
                     <li class="glide__slide">
                       <div class="work-img">
                         <img src="./assets/work-2.png" title="" alt="" />
                       </div>
-                      <h6>UI/UX DESIGN</h6>
-                      <h3>Skilly UI/UX Design</h3>
+                      <a
+                        href="http://aroundwebpage.s3-website-ap-southeast-2.amazonaws.com/"
+                        >Around Web Page</a
+                      >
+                      <h6>Around Web Page provides different recipes</h6>
                     </li>
                     <li class="glide__slide">
                       <div class="work-img">
                         <img src="./assets/work-3.png" title="" alt="" />
                       </div>
-                      <h6>UI/UX DESIGN</h6>
-                      <h3>Skilly UI/UX Design</h3>
+                      <a
+                        href="https://wilsonzhang91.github.io/Project_1/#gallery"
+                        >Thai Paragon Marrickville</a
+                      >
+                      <h6>Thai Paragon Marrickville resturant website</h6>
                     </li>
                   </ul>
                 </div>
@@ -401,22 +410,30 @@
                     <div class="work-img">
                       <img src="./assets/work-1.png" title="" alt="" />
                     </div>
-                    <h6>UI/UX DESIGN</h6>
-                    <h3>Skilly UI/UX Design</h3>
+                    <a href="https://quicklearner.io/">Quicklearner</a>
+                    <h6>
+                      Quicklearner creates and sells a gamified student
+                      engagement platform
+                    </h6>
                   </li>
                   <li class="projects">
                     <div class="work-img">
                       <img src="./assets/work-2.png" title="" alt="" />
                     </div>
-                    <h6>UI/UX DESIGN</h6>
-                    <h3>Skilly UI/UX Design</h3>
+                    <a
+                      href="http://aroundwebpage.s3-website-ap-southeast-2.amazonaws.com/"
+                      >Around Web Page</a
+                    >
+                    <h6>Around Web Page provides different recipes</h6>
                   </li>
                   <li class="projects">
                     <div class="work-img">
                       <img src="./assets/work-3.png" title="" alt="" />
                     </div>
-                    <h6>UI/UX DESIGN</h6>
-                    <h3>Skilly UI/UX Design</h3>
+                    <a href="https://wilsonzhang91.github.io/Project_1/#gallery"
+                      >Thai Paragon Marrickville</a
+                    >
+                    <h6>Thai Paragon Marrickville resturant website</h6>
                   </li>
                 </ul>
               </div>
