--- a/index.html
+++ b/index.html
@@ -206,11 +206,14 @@
                 <div class="list-left">
                   <ul>
                     <li>
-                      <span>Phone :</span> <label>(+61) 0422154879</label>
+                      <span>Phone :</span>
+                      <a href="callto:+61422154879">(+61) 422154879</a>
                     </li>
                     <li>
                       <span>Email :</span>
-                      <label>wilsonzhang91@gmail.com</label>
+                      <a href="mailto:wilsonzhang91@gmail.com"
+                        >wilsonzhang91@gmail.com</a
+                      >
                     </li>
                   </ul>
                 </div>
@@ -379,7 +382,7 @@
                       </div>
                       <a
                         href="https://wilsonzhang91.github.io/Project_1/#gallery"
-                        >Thai Paragon Marrickville</a
+                        >Thai Paragon</a
                       >
                       <h6>Thai Paragon Marrickville resturant website</h6>
                     </li>
@@ -431,7 +434,7 @@
                       <img src="./assets/work-3.png" title="" alt="" />
                     </div>
                     <a href="https://wilsonzhang91.github.io/Project_1/#gallery"
-                      >Thai Paragon Marrickville</a
+                      >Thai Paragon</a
                     >
                     <h6>Thai Paragon Marrickville resturant website</h6>
                   </li>
@@ -451,13 +454,13 @@
             <div class="contact-content">
               <div class="contact-info">
                 <div class="info-left">
-                  <a class="email" href="#">
+                  <a class="email" href="mailto:wilsonzhang91@gmail.com">
                     <img src="./assets/email.png" alt="email icon" />
                     <span>wilsonzhang91@gmail.com</span>
                   </a>
                 </div>
                 <div class="info-right">
-                  <a class="phone" href="#">
+                  <a class="phone" href="callto:+61422154879">
                     <img src="./assets/phone.png" alt="phone icon" />
                     <span>+61 422 154 879</span>
                   </a>
@@ -569,7 +572,7 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script>
       var typed = new Typed(".auto-type", {
-        strings: ["Developer", "Designer", "Engineer"],
+        strings: ["Developer", "Engineer"],
         typeSpeed: 150,
         backSpeed: 50,
         loop: true,
