open links in a new page

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     </li>
                     <li>
                       <span>Email :</span>
-                      <a href="mailto:wilsonzhang91@gmail.com"
+                      <a href="mailto:wilsonzhang91@gmail.com" target="_blank"
                         >wilsonzhang91@gmail.com</a
                       >
                     </li>
@@ -360,7 +360,9 @@
                       <div class="work-img">
                         <img src="./assets/work-1.png" title="" alt="" />
                       </div>
-                      <a href="https://quicklearner.io/">Quicklearner</a>
+                      <a href="https://quicklearner.io/" target="_blank"
+                        >Quicklearner</a
+                      >
                       <h6>
                         Quicklearner creates and sells a gamified student
                         engagement platform
@@ -372,6 +374,7 @@
                       </div>
                       <a
                         href="http://aroundwebpage.s3-website-ap-southeast-2.amazonaws.com/"
+                        target="_blank"
                         >Around Web Page</a
                       >
                       <h6>Around Web Page provides different recipes</h6>
@@ -382,6 +385,7 @@
                       </div>
                       <a
                         href="https://wilsonzhang91.github.io/Project_1/#gallery"
+                        target="_blank"
                         >Thai Paragon</a
                       >
                       <h6>Thai Paragon Marrickville resturant website</h6>
@@ -413,7 +417,9 @@
                     <div class="work-img">
                       <img src="./assets/work-1.png" title="" alt="" />
                     </div>
-                    <a href="https://quicklearner.io/">Quicklearner</a>
+                    <a href="https://quicklearner.io/" target="_blank"
+                      >Quicklearner</a
+                    >
                     <h6>
                       Quicklearner creates and sells a gamified student
                       engagement platform
@@ -425,6 +431,7 @@
                     </div>
                     <a
                       href="http://aroundwebpage.s3-website-ap-southeast-2.amazonaws.com/"
+                      target="_blank"
                       >Around Web Page</a
                     >
                     <h6>Around Web Page provides different recipes</h6>
@@ -433,7 +440,9 @@
                     <div class="work-img">
                       <img src="./assets/work-3.png" title="" alt="" />
                     </div>
-                    <a href="https://wilsonzhang91.github.io/Project_1/#gallery"
+                    <a
+                      href="https://wilsonzhang91.github.io/Project_1/#gallery"
+                      target="_blank"
                       >Thai Paragon</a
                     >
                     <h6>Thai Paragon Marrickville resturant website</h6>
@@ -454,7 +463,11 @@
             <div class="contact-content">
               <div class="contact-info">
                 <div class="info-left">
-                  <a class="email" href="mailto:wilsonzhang91@gmail.com">
+                  <a
+                    class="email"
+                    href="mailto:wilsonzhang91@gmail.com"
+                    target="_blank"
+                  >
                     <img src="./assets/email.png" alt="email icon" />
                     <span>wilsonzhang91@gmail.com</span>
                   </a>
@@ -511,7 +524,10 @@
                     </div>
                     <div class="send-btn">
                       <button>
-                        <a href="mailto:wilsonzhang91@gmail.com">
+                        <a
+                          href="mailto:wilsonzhang91@gmail.com"
+                          target="_blank"
+                        >
                           SEND INQUIRY
                         </a>
                       </button>
@@ -536,13 +552,22 @@
           </div>
           <div class="footer-right">
             <div class="icons">
-              <a class="facebook" href="#"
+              <a
+                class="facebook"
+                href="https://www.facebook.com/"
+                target="_blank"
                 ><i class="fa-brands fa-facebook-f"></i
               ></a>
-              <a class="twitter" href="#"
+              <a
+                class="twitter"
+                href="https://twitter.com/i/flow/login"
+                target="_blank"
                 ><i class="fa-brands fa-twitter"></i
               ></a>
-              <a class="instagram" href="#"
+              <a
+                class="instagram"
+                href="https://www.instagram.com/?hl=en"
+                target="_blank"
                 ><i class="fa-brands fa-instagram"></i
               ></a>
             </div>
