--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                   <ul>
                     <li>
                       <span>Phone :</span>
-                      <a href="callto:+61422154879">(+61) 422154879</a>
+                      <a href="tel:+61422154879">(+61) 422154879</a>
                     </li>
                     <li>
                       <span>Email :</span>
@@ -473,7 +473,7 @@
                   </a>
                 </div>
                 <div class="info-right">
-                  <a class="phone" href="callto:+61422154879">
+                  <a class="phone" href="tel:+61422154879">
                     <img src="./assets/phone.png" alt="phone icon" />
                     <span>+61 422 154 879</span>
                   </a>
