--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable = no"
     />
-    <title>Wilson - Portfolio Template</title>
+    <title>Wilson - Portfolio</title>
     <link rel="shortcut icon" type="image/icon" href="./assets/icon.jpeg" />
     <link
       rel="stylesheet"
