--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable = no"
     />
-    <title>Wilson - Portfolio</title>
+    <meta name="keywords" content="" />
+    <title>Wilson Zhang | Full Stack Developer &copy;</title>
+    <meta
+      name="description"
+      content="Hello, I'm an enthusiastic, self-motivated, reliable, responsible and hardworking full stack developer who works in Sydney"
+    />
+    <meta
+      property="og:title"
+      content="Wilson Zhang | Full Stack Developer &copy; | Home"
+    />
+    <meta
+      property="og:description"
+      content="Hello, I'm an enthusiastic, self-motivated, reliable, responsible and hardworking full stack developer who works in Sydney"
+    />
     <link rel="shortcut icon" type="image/icon" href="./assets/icon.jpeg" />
     <link
       rel="stylesheet"
@@ -189,7 +202,7 @@
             <div class="about-intro">
               <h6>MY INTRO</h6>
               <h2>I am <span>Wilson Z.</span></h2>
-              <h5>A lead Full Stack Developer based in Australia</h5>
+              <h5>A professional Full Stack Developer based in Australia</h5>
               <div class="intro-main">
                 <p>
                   A passionate Full Stack Developer who has experience in
@@ -547,26 +560,28 @@
           <div class="footer-left">
             <div class="left-info">
               <img src="./assets/logo.svg" alt="logo" />
-              <span class="ps-3">© Copyright 2022 | All rights reserved</span>
+              <span class="ps-3"
+                >&copy; Copyright 2022 | Created by Hyna Hua</span
+              >
             </div>
           </div>
           <div class="footer-right">
             <div class="icons">
               <a
                 class="facebook"
-                href="https://www.facebook.com/"
+                href="https://www.facebook.com/weixunz"
                 target="_blank"
                 ><i class="fa-brands fa-facebook-f"></i
               ></a>
               <a
                 class="twitter"
-                href="https://twitter.com/i/flow/login"
+                href="https://twitter.com/WilsonZ87181122"
                 target="_blank"
                 ><i class="fa-brands fa-twitter"></i
               ></a>
               <a
                 class="instagram"
-                href="https://www.instagram.com/?hl=en"
+                href="https://www.instagram.com/weixunzhang/?hl=en"
                 target="_blank"
                 ><i class="fa-brands fa-instagram"></i
               ></a>
