add resume file link in download link

--- a/index.html
+++ b/index.html
@@ -245,7 +245,11 @@
                 </div>
               </div>
               <div class="download-cv">
-                <a href="#" class="px-btn px-btn-primary">DOWNLOAD CV</a>
+                <a
+                  href="https://s3.us-west-2.amazonaws.com/secure.notion-static.com/f7c57573-204f-4f6c-a5d7-a36f7025b259/WilsonZhang_resume.pdf?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20220502%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20220502T142951Z&X-Amz-Expires=86400&X-Amz-Signature=bca82e7b8e3a3ff26bf06d744392378ad4bc0b3cbe89587765c4cb9a9973961a&X-Amz-SignedHeaders=host&response-content-disposition=filename%20%3D%22WilsonZhang_resume.pdf%22&x-id=GetObject"
+                  class="px-btn px-btn-primary"
+                  >DOWNLOAD CV</a
+                >
               </div>
             </div>
           </div>
